--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-SizeFS originally created in 2012 by Mark McArdle
+SizeFS originally created in 2012 by Mark McArdle, content generation added in 2013 by Joel Wright.
 
 The PRIMARY AUTHORS are (and/or have been):
 
