--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,4 @@
 v0.1, 10/5/2012 -- Initial release.
 v0.2, 21/09/2013 -- Initial public labs release.
 v0.2.1, 20/10/2013 -- Bug fix release
+v0.2.2, 20/10/2013 -- Fix Debian/python2.6 issues
